--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: xu-cheng/latex-action@v2
         with:
-          root_file: main.tex
+          root_file: presentation.tex
       - name: Commit PDF
         run: |
           git config --local user.email "action@github.com"
